renamed project, old name no longer makes sense

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [URL]
-GameName=roguelike_bossfight
+GameName=TaleOfHeart
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/MainLevel.MainLevel
