trying to get build working

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=TaleOfHeart
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/MainLevel.MainLevel
-GameDefaultMap=/Game/Levels/MainLevel.MainLevel
+EditorStartupMap=/Game/Levels/BetaLevel.BetaLevel
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
